added github link to blurb

--- a/portfolio/templates/portfolio.html
+++ b/portfolio/templates/portfolio.html
@@ -50,7 +50,7 @@
 				</div>
 -->
 				<div>
-					I am a self-taught Python/Django developer. 
+					I am a self-taught Python/Django developer. This portfolio page is hosted using AWS S3. Access the <a hrf="https://github.com/TaurusCanis/adole_portfolio">Github</a>.
 				</div>
 			</section>
 			<section class="container" id="skills">
